# Milestone1-zomato-vercel

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  nixpacks.toml  pyproject.toml  quality_report.json  railway.toml  render.disk.yaml  render.yaml  requirements.txt
.streamlit/: config.toml
Docs/: README.md  edge_cases.md  phase_wise_architecture.md  problemstatement.md
Docs/phase2/: models.py  normalize.py
Docs/phase3/: retrieve.py
Docs/phase4/: recommend.py  run.py
Docs/phase7/: README.md  __init__.py  app-complete.py  app-final.py  app-simple.py  health_api.py  recommendation_api.py  requirements.txt
backend/: README.md
backend/app/: dataset.py  dataset_cache.py  env.py  main.py  pipeline.py  railway_env.py
frontend/: .env.example  .env.local.example  .env.production.example  README.md  next.config.mjs  vercel.json
frontend/src/app/: globals.css
frontend/src/components/: api-config-banner.tsx  home-screen.tsx
phase5/: README.md  __init__.py  cli.py  main.py  main_simple.py  renderer.py  run.py  ux_enhancements.py
phase6/: README.md  __init__.py  dashboard.py  golden_tests.py  main.py  metrics.py  monitoring.py  quality_improvement.py
phase7/: app.py  metadata_api.py  models.py  simple-api.py  test-recommendations.py  test-result.json
phase8/: README.md  index-fixed.html  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
scripts/: railway_build.sh  railway_install.sh  railway_start.sh  render_build.sh
src/zomato_rec/: config.py  logging_config.py  main.py
(+22 files in other folders)
