[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zomato-ai-reco"
version = "0.1.0"
description = "AI-powered restaurant recommendation system (Zomato use case)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "datasets>=2.19",
  "pandas>=2.2",
  "pyarrow>=15",
  "streamlit>=1.35",
  "groq>=1.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

